--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "10.12.21",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
+    "md5-typescript": "^1.0.5",
     "node-sass": "^4.11.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
@@ -27,5 +28,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/lodash": "^4.14.120"
+  }
 }
